--- a/main.html
+++ b/main.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+	<meta charset="UTF-8">
+	<title>Grid Color Changer</title>
+	<style>
+		.grid {
+			display: grid;
+			grid-template-columns: repeat(3, 1fr);
+			grid-gap: 10px;
+		}
+		.grid-item {
+			background-color: transparent;
+			padding: 50px;
+			font-size: 36px;
+			text-align: center;
+			cursor: pointer;
+		}
+	</style>
 </head>
-
 <body>
-	<div class="grid-container"> 
+	<div class="grid">
 		<div id="1" class="grid-item">1</div>
-		<div id="2" class="grid-item">2</div> 
+		<div id="2" class="grid-item">2</div>
 		<div id="3" class="grid-item">3</div>
 		<div id="4" class="grid-item">4</div>
 		<div id="5" class="grid-item">5</div>
@@ -18,18 +30,28 @@
 		<div id="8" class="grid-item">8</div>
 		<div id="9" class="grid-item">9</div>
 	</div>
-	<div>
-		<label for="block_id">Block ID:</label>
-		<input type="text" id="block_id"> 
-		<label for="color_id">Color:</label> 
-		<input type="color" id="color_id">     
-		<button id="change_button">Change Color</button> 
-		<button id="reset_button">Reset</button> 
-	</div>
-	<script src="script.js"></script> 
-    <script type="text/javascript" src="./script.js">
-</script>
+	<label for="input-id">Input ID:</label>
+	<input type="text" id="input-id">
+	<label for="color-id">Color:</label>
+	<input type="color" id="color-id">
+	<button id="submit-button">Submit</button>
+	<script>
+		const gridItems = document.querySelectorAll('.grid-item');
+		const inputId = document.getElementById('input-id');
+		const colorId = document.getElementById('color-id');
+		const submitButton = document.getElementById('submit-button');
 
+		submitButton.addEventListener('click', () => {
+			const id = inputId.value;
+			const color = colorId.value;
+			for (let i = 0; i < gridItems.length; i++) {
+				gridItems[i].style.backgroundColor = 'transparent';
+			}
+			const item = document.getElementById(id);
+			if (item) {
+				item.style.backgroundColor = color;
+			}
+		});
+	</script>
 </body>
-
 </html>
